objects/Apttus_DocuApi__DocuSignTemplate__c.object
<CustomObject>
    <description>Stores the DocuSign template Id and Name to be used by the Apttus-DocuSign connector</description>
    <fields>
        <fullName>Apttus_DocuApi__EmailBody__c</fullName>
        <description>Email content defined on the template</description>
        <inlineHelpText>Email content defined on the template</inlineHelpText>
        <label>Email Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__EmailSubject__c</fullName>
        <description>Email subject defined in the template</description>
        <inlineHelpText>Email subject defined in the template</inlineHelpText>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__NumberOfDocuments__c</fullName>
        <description>Number of documents in the template</description>
        <inlineHelpText>Number of documents in the template</inlineHelpText>
        <label>Number Of Documents</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__NumberOfRecipients__c</fullName>
        <description>Number of recipients in the template</description>
        <inlineHelpText>Number of recipients in the template</inlineHelpText>
        <label>Number Of Recipients</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__TemplateName__c</fullName>
        <description>Name of the DocuSign template</description>
        <inlineHelpText>Name of the DocuSign template</inlineHelpText>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Template</label>
    <nameField>
        <label>DocuSign Template Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>